# restaurant-health-predictor

./: .gitignore  AGENTS.md  BACKLOG.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: data.md  leakage.md  pipeline.md
reports/: confusion_matrix.csv  metrics.json
src/rhgp/: config.py
src/rhgp/data/: fetch.py  schema.py
src/rhgp/features/: aggregate_inspections.py  build_examples.py  features.py
src/rhgp/models/: baselines.py  eval.py  train.py  train_rf.py
tests/: test_baselines.py  test_eval_thresholds.py  test_fetch_query.py  test_leakage_guards.py  test_model_key_inference.py  test_smoke.py
