[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rhgp"
version = "0.1.0"
description = "Restaurant Health Grade Predictor (NYC inspections)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "requests>=2.32",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6.9",
  "pyright>=1.1.385",
]
app = [
  "streamlit>=1.37",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

